cmake_minimum_required(VERSION 2.8.0)

project(HelloYoctoWorld)

SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Espen Lie Melsom Rutger <espen.rutger@gmail.com")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Simplest Yocto learning program")
SET(CPACK_PACKAGE_DESCRIPTION "")

SET(CPACK_PACKAGE_NAME "HelloYoctoWorld")
SET(CPACK_GENERATOR "DEB")

SET(CPACK_PACKAGE_VENDOR "Espen L. M. Rutger")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "1")
SET(CPACK_PACKAGE_VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})
SET(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-i686)

set(CMAKE_INSTALL_PREFIX usr/)
add_subdirectory(src)

